# ghostmem

./: .gitignore  CMakeLists.txt  README.md  RELEASE_INSTRUCTIONS.md  build-simple.bat  build-simple.sh  build.bat  build.sh  run_metrics.bat  run_metrics.sh
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml  release.yml
docs/: API_REFERENCE.md  ENCRYPTION.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  METRICS_SUMMARY.md  PERFORMANCE_METRICS.md  THREAD_SAFETY.md
examples/: encryption_example.cpp
src/: main.cpp
src/ghostmem/: GhostAllocator.h  GhostMemoryManager.cpp  GhostMemoryManager.h  Version.h
tests/: test_allocator.cpp  test_basic_allocation.cpp  test_compression.cpp  test_deallocation.cpp  test_disk_backing.cpp  test_disk_encryption.cpp  test_framework.h  test_lru.cpp  test_main.cpp  test_metrics.cpp  test_threading.cpp  test_version.cpp
